# rolling-opengl

./: CMakeLists.txt  main.cpp  stb_image.h  vcpkg.json
assets/: fragment.glsl  planeFragment.glsl  vertex.glsl
